--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
     />
   </head>
   <body>
+    <div class="container">
+        <div class="hamburger-menu">
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
+
+        </div>
     <script src="/script.js"></script>
   </body>
 </html>
