--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
             <div class="line line-3"></div>
 
         </div>
+        <header class="header">
+            <div class="img-wrapper">
+                <img src="/Asset/Images/bg.jpg">
+            </div>
+            <div class="banner">
+                <h1>Architecture & Interior Design</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <button>Discover Now</button>
+            </div>
+        </header>
+    </div>
     <script src="/script.js"></script>
   </body>
 </html>
