--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
                 <button>Discover Now</button>
             </div>
         </header>
+        <section class="sidebar">
+          <ul class="menu">
+            
+          </ul>
+
+        </section>
+
     </div>
     <script src="/script.js"></script>
   </body>
