--- a/index.html
+++ b/index.html
@@ -56,11 +56,13 @@
                 <ul class="menu-item">
                   <a href="#" class="menu-link"></a><ul class="menu">
                     <ul class="menu-item">
-                      <a href="#" class="menu-link">Home</a><ul class="menu">
+                      <a href="#" class="menu-link">About Us</a><ul class="menu">
                         <ul class="menu-item">
-                          <a href="#" class="menu-link">Home</a><ul class="menu">
+                          <a href="#" class="menu-link">Team</a><ul class="menu">
                             <ul class="menu-item">
-                              <a href="#" class="menu-link">Home</a>
+                              <a href="#" class="menu-link">Pricing</a>
+                              <ul class="menu-item">
+                                <a href="#" class="menu-link">Contact</a>
             </ul>
 
           </ul>
