--- a/index.html
+++ b/index.html
@@ -50,19 +50,25 @@
         </header>
         <section class="sidebar">
           <ul class="menu">
-            <ul class="menu-item">
+            <li class="menu-item">
               <a href="#" class="menu-link">Home</a>
-              <ul class="menu">
-                <ul class="menu-item">
-                  <a href="#" class="menu-link"></a><ul class="menu">
-                    <ul class="menu-item">
-                      <a href="#" class="menu-link">About Us</a><ul class="menu">
-                        <ul class="menu-item">
-                          <a href="#" class="menu-link">Team</a><ul class="menu">
-                            <ul class="menu-item">
-                              <a href="#" class="menu-link">Pricing</a>
-                              <ul class="menu-item">
-                                <a href="#" class="menu-link">Contact</a>
+            </li>
+            <li class="menu-item">
+              <a href="#" class="menu-link">About Us</a>
+            </li> 
+            <li class="menu-item">
+              <a href="#" class="menu-link">Team</a>
+            </li>
+             <li class="menu-item">
+              <a href="#" class="menu-link">Pricing</a>
+            </li> 
+            <li class="menu-item">
+              <a href="#" class="menu-link">Contact</a>
+            </li>
+            <div class="social-media">
+              
+            </div>
+
             </ul>
 
           </ul>
