--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
               <a href="#" class="menu-link">Contact</a>
             </li>
             <div class="social-media">
-              
+            <a href="#"><i class="fab fa-facebook-f">
+            </i></a>
+            <a href="#"><i class="fab fa-facebook-f"> 
+            </i></a>
+            <a href="#"><i class="fab fa-facebook-f">
+            </i></a>  
             </div>
 
             </ul>
