--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             <div class="social-media">
             <a href="#"><i class="fab fa-facebook-f">
             </i></a>
-            <a href="#"><i class="fab fa-facebook-f"> 
+            <a href="#"><i class="fab fa-instagram"> 
             </i></a>
-            <a href="#"><i class="fab fa-facebook-f">
+            <a href="#"><i class="fab fa-twitter">
             </i></a>  
             </div>
 
