--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
             <a href="#"><i class="fab fa-twitter"></i></a>
           </div>
         </section>
+        .section
+
 
     </div>
     <script src="/script.js"></script>
