--- a/index.html
+++ b/index.html
@@ -73,7 +73,29 @@
             <a href="#"><i class="fab fa-twitter"></i></a>
           </div>
         </section>
-        .section
+        <section class="About-us">
+          <div class="section-header">
+            <h1 class="section-header">About-us</h1>
+            <div class="underline"></div>
+            </div>
+            <div class="services">
+              <div class="service">
+                <div class="service-header">
+                  <i class="fas fa-pen-nib"></i>
+                  <h3>Interior</h3>
+                  <p class="service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                     Id magni voluptatem tempora placeat laboriosam quia tempore doloribus sit architecto, 
+                     cumque itaque repudiandae blanditiis explicabo libero!
+                     </p>
+
+                  </p>
+
+              </div>
+
+            </div>
+
+          </div>
+        </section>
 
 
     </div>
