--- a/index.html
+++ b/index.html
@@ -87,13 +87,54 @@
                      Id magni voluptatem tempora placeat laboriosam quia tempore doloribus sit architecto, 
                      cumque itaque repudiandae blanditiis explicabo libero!
                      </p>
-
-                  </p>
-
               </div>
-
             </div>
-
+            <div class="service">
+              <div class="service-header">
+                <i class="fas fa-paint-roller"></i>
+                <h3>Exterior</h3>
+                <p class="service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                   Id magni voluptatem tempora placeat laboriosam quia tempore doloribus sit architecto, 
+                   cumque itaque repudiandae blanditiis explicabo libero!
+                   </p>
+            </div>
+          </div> <div class="service">
+            <div class="service-header">
+              <i class="fas fa-pencil-alt"></i>
+              <h3>Design</h3>
+              <p class="service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                 Id magni voluptatem tempora placeat laboriosam quia tempore doloribus sit architecto, 
+                 cumque itaque repudiandae blanditiis explicabo libero!
+                 </p>
+          </div>
+        </div> <div class="service">
+          <div class="service-header">
+            <i class="fas fa-pain-brush"></i>
+            <h3>Decoration</h3>
+            <p class="service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+               Id magni voluptatem tempora placeat laboriosam quia tempore doloribus sit architecto, 
+               cumque itaque repudiandae blanditiis explicabo libero!
+               </p>
+        </div>
+      </div> <div class="service">
+        <div class="service-header">
+          <i class="fas fa-ruler-combined"></i>
+          <h3>Planning</h3>
+          <p class="service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+             Id magni voluptatem tempora placeat laboriosam quia tempore doloribus sit architecto, 
+             cumque itaque repudiandae blanditiis explicabo libero!
+             </p>
+      </div>
+    </div> <div class="service">
+      <div class="service-header">
+        <i class="far fa-building"></i>
+        <h3>Execution</h3>
+        <p class="service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+           Id magni voluptatem tempora placeat laboriosam quia tempore doloribus sit architecto, 
+           cumque itaque repudiandae blanditiis explicabo libero!
+           </p>
+    </div>
+  </div>
           </div>
         </section>
 
