--- a/index.html
+++ b/index.html
@@ -133,8 +133,13 @@
            Id magni voluptatem tempora placeat laboriosam quia tempore doloribus sit architecto, 
            cumque itaque repudiandae blanditiis explicabo libero!
            </p>
-    </div>
-  </div>
+          </div>
+          </div>
+          <div class="about-us-img-wrapper">
+            <img src="images/house.png" alt="">
+
+
+          </div>
           </div>
         </section>
 
