--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           </div>
           </div>
           <div class="about-us-img-wrapper">
-            <img src="images/house.png" alt="">
+          <img src="/Asset/Images/house.png">
 
 
           </div>
