--- a/index.html
+++ b/index.html
@@ -32,118 +32,126 @@
   </head>
   <body>
     <div class="container">
-        <div class="hamburger-menu">
-            <div class="line line-1"></div>
-            <div class="line line-2"></div>
-            <div class="line line-3"></div>
-            <span>Close</span>
-
+      <div class="hamburger-menu">
+        <div class="line line-1"></div>
+        <div class="line line-2"></div>
+        <div class="line line-3"></div>
+        <span>Close</span>
+      </div>
+      <header class="header">
+        <div class="img-wrapper">
+          <img src="/Asset/Images/bg.jpg" />
         </div>
-        <header class="header">
-            <div class="img-wrapper">
-                <img src="/Asset/Images/bg.jpg">
+        <div class="banner">
+          <h1>Architecture & Interior Design</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <button>Discover Now</button>
+        </div>
+      </header>
+      <section class="sidebar">
+        <ul class="menu">
+          <li class="menu-item">
+            <a href="#" class="menu-link" data-content="Home">Home</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link" data-content="About Us">About Us</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link" data-content="Team">Team</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link" data-content="Pricing">Pricing</a>
+          </li>
+          <li class="menu-item">
+            <a href="#" class="menu-link" data-content="Contact">Contact</a>
+          </li>
+        </ul>
+        <div class="social-media">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+        </div>
+      </section>
+      <section class="about-us">
+        <div class="section-header">
+          <h1 class="section-heading">About Us</h1>
+          <div class="underline"></div>
+        </div>
+        <div class="services">
+          <div class="service">
+            <div class="service-header">
+              <i class="fas fa-pen-nib"></i>
+              <h3>Interior</h3>
             </div>
-            <div class="banner">
-                <h1>Architecture & Interior Design</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <button>Discover Now</button>
-            </div>
-        </header>
-        <section class="sidebar">
-          <ul class="menu">
-            <li class="menu-item">
-              <a href="#" class="menu-link" data-content="Home">Home</a>
-            </li>
-            <li class="menu-item">
-              <a href="#" class="menu-link" data-content="About Us">About Us</a>
-            </li>
-            <li class="menu-item">
-              <a href="#" class="menu-link" data-content="Team">Team</a>
-            </li>
-            <li class="menu-item">
-              <a href="#" class="menu-link" data-content="Pricing">Pricing</a>
-            </li>
-            <li class="menu-item">
-              <a href="#" class="menu-link" data-content="Contact">Contact</a>
-            </li>
-          </ul>
-          <div class="social-media">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+              provident quia repellendus, architecto nihil cum nesciunt rem quae
+              deleniti fugit quo? Ex officia nihil sint.
+            </p>
           </div>
-        </section>
-        <section class="About-us">
-          <div class="section-header">
-            <h1 class="section-header">About-us</h1>
-            <div class="underline"></div>
+          <div class="service">
+            <div class="service-header">
+              <i class="fas fa-paint-roller"></i>
+              <h3>Exterior</h3>
             </div>
-            <div class="services">
-              <div class="service">
-                <div class="service-header">
-                  <i class="fas fa-pen-nib"></i>
-                  <h3>Interior</h3>
-                  <p class="service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                     Id magni voluptatem tempora placeat laboriosam quia tempore doloribus sit architecto, 
-                     cumque itaque repudiandae blanditiis explicabo libero!
-                     </p>
-              </div>
-            </div>
-            <div class="service">
-              <div class="service-header">
-                <i class="fas fa-paint-roller"></i>
-                <h3>Exterior</h3>
-                <p class="service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                   Id magni voluptatem tempora placeat laboriosam quia tempore doloribus sit architecto, 
-                   cumque itaque repudiandae blanditiis explicabo libero!
-                   </p>
-            </div>
-          </div> <div class="service">
+
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+              provident quia repellendus, architecto nihil cum nesciunt rem quae
+              deleniti fugit quo? Ex officia nihil sint.
+            </p>
+          </div>
+          <div class="service">
             <div class="service-header">
               <i class="fas fa-pencil-alt"></i>
               <h3>Design</h3>
-              <p class="service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                 Id magni voluptatem tempora placeat laboriosam quia tempore doloribus sit architecto, 
-                 cumque itaque repudiandae blanditiis explicabo libero!
-                 </p>
+            </div>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+              provident quia repellendus, architecto nihil cum nesciunt rem quae
+              deleniti fugit quo? Ex officia nihil sint.
+            </p>
           </div>
-        </div> <div class="service">
-          <div class="service-header">
-            <i class="fas fa-pain-brush"></i>
-            <h3>Decoration</h3>
-            <p class="service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-               Id magni voluptatem tempora placeat laboriosam quia tempore doloribus sit architecto, 
-               cumque itaque repudiandae blanditiis explicabo libero!
-               </p>
-        </div>
-      </div> <div class="service">
-        <div class="service-header">
-          <i class="fas fa-ruler-combined"></i>
-          <h3>Planning</h3>
-          <p class="service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-             Id magni voluptatem tempora placeat laboriosam quia tempore doloribus sit architecto, 
-             cumque itaque repudiandae blanditiis explicabo libero!
-             </p>
-      </div>
-    </div> <div class="service">
-      <div class="service-header">
-        <i class="far fa-building"></i>
-        <h3>Execution</h3>
-        <p class="service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-           Id magni voluptatem tempora placeat laboriosam quia tempore doloribus sit architecto, 
-           cumque itaque repudiandae blanditiis explicabo libero!
-           </p>
+
+          <div class="service">
+            <div class="service-header">
+              <i class="fas fa-paint-brush"></i>
+              <h3>Decoration</h3>
+            </div>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+              provident quia repellendus, architecto nihil cum nesciunt rem quae
+              deleniti fugit quo? Ex officia nihil sint.
+            </p>
           </div>
+          <div class="service">
+            <div class="service-header">
+              <i class="fas fa-ruler-combined"></i>
+              <h3>Planning</h3>
+            </div>
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+              provident quia repellendus, architecto nihil cum nesciunt rem quae
+              deleniti fugit quo? Ex officia nihil sint.
+            </p>
+          </div>
+          <div class="service">
+            <div class="service-header">
+              <i class="far fa-building"></i>
+              <h3>Execution</h3>
+            </div>
+
+            <p class="service-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat,
+              provident quia repellendus, architecto nihil cum nesciunt rem quae
+              deleniti fugit quo? Ex officia nihil sint.
+            </p>
           </div>
           <div class="about-us-img-wrapper">
-          <img src="/Asset/Images/house.png">
-
-
+            <img src="/Asset/Images/house.png" />
           </div>
-          </div>
-        </section>
-
-
+        </div>
+      </section>
     </div>
     <script src="/script.js"></script>
   </body>
