--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
           </div>
         </div>
       </section>
+      <section class="Team">
+         
+      </section>
     </div>
     <script src="/script.js"></script>
   </body>
