--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
         </div>
       </section>
       <section class="Team">
+      <div class="section-header">
+          <h1 class="section-heading">Our Team</h1>
+          <div class="underline"></div>
+        </div>  
          
       </section>
     </div>
