--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
       <div class="section-header">
           <h1 class="section-heading">Our Team</h1>
           <div class="underline"></div>
+        </div>
+        <div class="Cards-Wrapper ">
+          <div class="Card">
+            
+          </div>
         </div>  
          
       </section>
