--- a/index.html
+++ b/index.html
@@ -159,7 +159,10 @@
         </div>
         <div class="Cards-Wrapper ">
           <div class="Card">
-            
+            <div class="Card-img-Wrapper">
+
+            </div>
+
           </div>
         </div>  
          
