--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
         <div class="Cards-Wrapper ">
           <div class="Card">
             <div class="Card-img-Wrapper">
+              <img src="/Asset/Images/person-1.jpg" alt="CEO">
 
             </div>
 
