--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
           <div class="Card">
             <div class="Card-img-Wrapper">
               <img src="/Asset/Images/person-1.jpg" alt="CEO">
+              <div>
+                
+              </div>
 
             </div>
 
