--- a/index.html
+++ b/index.html
@@ -161,9 +161,10 @@
           <div class="Card">
             <div class="Card-img-Wrapper">
               <img src="/Asset/Images/person-1.jpg" alt="CEO">
-              <div>
-                
-              </div>
+            </div>
+            <div class="Card-info">
+
+            </div>
 
             </div>
 
