--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
               <img src="/Asset/Images/person-1.jpg" alt="CEO">
             </div>
             <div class="Card-info">
+              <h2>John Smith</h2>
 
             </div>
 
