--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
             </div>
             <div class="Card-info">
               <h2>John Smith</h2>
+              <h3>CEO</h3>
 
             </div>
 
