--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
             <div class="Card-info">
               <h2>John Smith</h2>
               <h3>CEO</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nihil!</p>
+              <button>Read More</button>
 
             </div>
 
