--- a/index.html
+++ b/index.html
@@ -167,9 +167,28 @@
               <h3>CEO</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nihil!</p>
               <button>Read More</button>
-
             </div>
-
+            </div>
+            <div class="Card">
+            <div class="Card-img-Wrapper">
+              <img src="/Asset/Images/person-2.jpg" alt="Designer">
+            </div>
+            <div class="Card-info">
+              <h2>Ann Brown</h2>
+              <h3>Designer</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nihil!</p>
+              <button>Read More</button>
+            </div>
+            </div><div class="Card">
+            <div class="Card-img-Wrapper">
+              <img src="/Asset/Images/person-1.jpg" alt="CEO">
+            </div>
+            <div class="Card-info">
+              <h2>John Smith</h2>
+              <h3>CEO</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nihil!</p>
+              <button>Read More</button>
+            </div>
             </div>
 
           </div>
