--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
             </div>
             </div><div class="Card">
             <div class="Card-img-Wrapper">
-              <img src="/Asset/Images/person-1.jpg" alt="CEO">
+              <img src="/Asset/Images/person-3.jpg" alt="Architect">
             </div>
             <div class="Card-info">
-              <h2>John Smith</h2>
-              <h3>CEO</h3>
+              <h2>Mary Doe</h2>
+              <h3>Architect</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nihil!</p>
               <button>Read More</button>
             </div>
