--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           </div>
         </div>
       </section>
-      <section class="Team">
+      <section class="team">
       <div class="section-header">
           <h1 class="section-heading">Our Team</h1>
           <div class="underline"></div>
