--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
           <h1 class="section-heading">Our Team</h1>
           <div class="underline"></div>
         </div>
-        <div class="Cards-Wrapper ">
-          <div class="Card">
-            <div class="Card-img-Wrapper">
+        <div class="cards-wrapper ">
+          <div class="card">
+            <div class="card-img-wrapper">
               <img src="/Asset/Images/person-1.jpg" alt="CEO">
             </div>
-            <div class="Card-info">
+            <div class="card-info">
               <h2>John Smith</h2>
               <h3>CEO</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, nihil!</p>
