--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
           </div>
         </div>
       </section>
+      <section class="contact">
+        
+      </section>
     </div>
     <script src="/script.js"></script>
     <script src="/script.js"></script>
