--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@
       </section>
       <section class="contact">
         <div class="contact-wrapper">
-          
+          <div class="contact-left"></div>
+ 
         </div>
       </section>
     </div>
