--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <section class="contact">
         <div class="contact-wrapper">
           <div class="contact-left"></div>
- 
+          <div class="contact-right">
         </div>
       </section>
     </div>
