--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
         <div class="contact-wrapper">
           <div class="contact-left"></div>
           <div class="contact-right">
+            <h1 class="contact-heading">Contact</h1>
+            <form>
         </div>
       </section>
     </div>
