--- a/index.html
+++ b/index.html
@@ -208,6 +208,8 @@
           <div class="contact-right">
             <h1 class="contact-heading">Contact</h1>
             <form>
+              <div class="input-group">
+
         </div>
       </section>
     </div>
