--- a/index.html
+++ b/index.html
@@ -209,6 +209,11 @@
             <h1 class="contact-heading">Contact</h1>
             <form>
               <div class="input-group">
+                <div class="input-group">
+                  <input type="text" class="field" />
+                  <label class="input-label">Full Name</label>
+                </div>
+                
 
         </div>
       </section>
