--- a/index.html
+++ b/index.html
@@ -221,6 +221,10 @@
                   <textarea class="field"></textarea>
                   <label class="message">Message</label>
                 </div>
+                <input type="submit" class="submit-btn" value="Submit" />
+              </form>
+            </div>
+          </div>
 
 
         </div>
