--- a/index.html
+++ b/index.html
@@ -225,6 +225,10 @@
           </div>
         </div>
       </section>
+      <footer class="footer">
+        <div class="footer-content">
+          <p class="copyright">Copyright &copy; 2020, CodeAndCreate All Rights Reserved</p>
+      </section>
     </div>
     <script src="/script.js"></script>
     <script src="/script.js"></script>
