--- a/index.html
+++ b/index.html
@@ -228,6 +228,25 @@
       <footer class="footer">
         <div class="footer-content">
           <p class="copyright">Copyright &copy; 2020, CodeAndCreate All Rights Reserved</p>
+          Reserved</p>
+          <div class="social-list">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <a href="#" class="scroll-btn">
+      <i class="fas fa-arrow-up"></i>
+    </a>
+    <script src="/script.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.7.0.js"
+      integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+      crossorigin="anonymous"
+    ></script>
+    <script src="/tilt.js"></script>
       </section>
     </div>
     <script src="/script.js"></script>
